@@ -5,6 +5,7 @@ README				Get you started with this package
 TODO				The To-Do list for the library
 pqedit.PL                       Writes pqedit.cgi script
 pqedit.pod			PQ Edit documentation
+PQLOGIN.pm                      Optional PQLOGIN module
 test.pl                         Run tests
 t/test1.in                      Input file for test 1
 pqweb/mssql_pqweb.sql		SQL DDL file to create optional pqweb database
